--- a/about.css
+++ b/about.css
@@ -44,7 +44,7 @@ main .about span {
     justify-content: space-around;
 }
 .info img {
-    width: 300px;
+    max-width: 100%;
     height: 650px;
 }
 .info .aboutme {
@@ -113,3 +113,71 @@ main .about span {
     background-color: red;
     width: 330px;
 }
+/* Responsive */
+
+/* Mobile styles */
+@media (max-width: 768px) {
+    nav ul {
+        display: none;
+    }
+    .tooggle i {
+        font-size: 50px;
+    }
+    .tooggle {
+        text-align: center;
+    }
+    main .about h1 {
+        font-size: 50px;
+    }
+    .info img {
+        border-radius: 20px;
+    }
+    .info img:hover {
+        box-shadow: 3px 4px 8px red;
+        transition: 2s;
+    }
+      .info {
+        text-align: center;
+      }
+      .info .aboutme {
+        width: 400px;
+    }
+    .aboutme .aboutmechild {
+        width: 400px;
+        margin-left: 100px;
+    }
+    .skills .myskills {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+}
+
+  /* Tablet styles */
+  @media (min-width: 769px) and (max-width: 1024px) {
+    body {
+      font-size: 25px;
+    }
+    main .about h1 {
+        font-size: 60px;
+    }
+    .info img {
+        border-radius: 16px;
+    }
+    .info img:hover {
+        box-shadow: 3px 4px 8px red;
+        transition: 2s;
+    }
+      .info .aboutme {
+        width: 550px;
+        line-height: 35px;
+    }
+    .aboutme .aboutmechild {
+        width: 500px;
+        margin-right: 130px;
+    }
+    .skills {
+        text-align: center;
+    }
+  }
