--- a/home.css
+++ b/home.css
@@ -7,9 +7,6 @@ body {
     background-color: black;
     color: white;
     font-family: 'Courier New', Courier, monospace;
-    background-image: url(/PortfolioAbraham/Images/ImagePortfolio.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 
@@ -52,7 +49,7 @@ main .intro {
 }
 .intro p {
     font-size: 20px;
-    font-weight: lighter;
+    font-weight: bold;
     margin-top: 30px;
 }
 .intro button {
@@ -76,6 +73,7 @@ footer {
     display: flex;
     justify-content: space-between;
     margin: 30px 20px;
+    font-weight: bold;
 }
 footer .first {
     line-height: 25px;
@@ -93,3 +91,80 @@ footer .second i:hover {
 footer .second a {
     color: white;
 }
+
+/* Mobile styles */
+@media (max-width: 768px) {
+    body {
+     background-image: url(Images/ImagePortfolio.jpg);
+     background-repeat: no-repeat;
+    background-size: cover;
+    }
+    nav ul {
+        display: none;
+    }
+    .tooggle i {
+        font-size: 50px;
+    }
+    .tooggle {
+        text-align: center;
+    }
+    .intro h1 {
+        font-size: 70px;
+    }
+    .intro p {
+        margin-top: 10px;
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .intro button {
+        padding: 15px;
+        width: 200px;
+    }
+    footer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 30px 20px;
+    }
+    footer .first {
+        text-align: center;
+    }
+    footer .first p {
+        font-size: 20px;
+        font-weight: bolder;
+    }
+    footer .second {
+        display: flex;
+        gap: 40px;
+    }
+    footer .second i {
+        font-size: 48px;
+        color: red;
+    }
+    footer .second i:hover {
+        color: white;
+    }
+  }
+
+  /* Tablet styles */
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .intro p {
+        margin-top: 10px;
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .intro button {
+        padding: 15px;
+        width: 200px;
+    }
+    footer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 30px 20px;
+    }
+    footer .first p {
+        font-size: 20px;
+        font-weight: bolder;
+    }
+  }
